--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
   <!-- Edit Ramen Form -->
   <form id="edit-ramen">
     <h4>Update the Featured Ramen</h4>
+    <input type="number" id="ramen-id" hidden />
     <label for="rating">Rating: </label>
     <input type="number" name="rating" id="new-rating" />
     <label for="new-comment">Comment: </label>
