--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
     <input type="submit" value="Update" />
   </form>
 
+  <!-- Delete Option -->
+  <form id="delete-ramen">
+    <input type="number" id="ramen-id" hidden />
+    <input type="text" name="delete-confirm" id="delete-confirm" />
+    <input type="submit" value="delete" />
+  </form>
+
 </body>
 
 </html>
