--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <form id="delete-ramen">
     <input type="number" id="ramen-id" hidden />
     <input type="text" name="delete-confirm" id="delete-confirm" />
-    <input type="submit" value="delete" />
+    <input type="submit" value="Delete" />
   </form>
 
 </body>
